--- a/langchainupdated/updatedlangchain/1-langchainintro.ipynb
+++ b/langchainupdated/updatedlangchain/1-langchainintro.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8396bd69",
    "metadata": {},
    "outputs": [
@@ -53,9 +53,7 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
-    "groq_api_key=os.getenv(\"GROQ_API_KEY\")\n",
-    "groq_api_key\n",
-    "# os.environ[\"OPENAI_API_KEY\"]=os.getenv(\"OPENAI_API_KEY\")"
+    "os.environ[\"OPENAI_API_KEY\"]=os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
