--- a/langchainupdated/updatedlangchain/5-structuredoutput.ipynb
+++ b/langchainupdated/updatedlangchain/5-structuredoutput.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "209803c5",
    "metadata": {},
    "outputs": [
@@ -39,8 +39,7 @@
    "source": [
     "import os\n",
     "from langchain.chat_models import init_chat_model\n",
-    "# os.environ[\"GROQ_API_KEY\"]=os.getenv(\"GROQ_API_KEY\")\n",
-    "os.environ[\"GROQ_API_KEY\"]=\"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\"\n",
+    "os.environ[\"GROQ_API_KEY\"]=os.getenv(\"GROQ_API_KEY\")\n",
     "model=init_chat_model(\"groq:qwen/qwen3-32b\")\n",
     "model"
    ]
